third_party/llvm-project/llvm/test/Assembler/invalid-diimportedentity-missing-tag.ll
; RUN: not llvm-as < %s -disable-output 2>&1 | FileCheck %s

; CHECK: [[@LINE+1]]:33: error: missing required field 'tag'
!3 = !DIImportedEntity(scope: !0)
